--- a/app/layout/partials/head.pug
+++ b/app/layout/partials/head.pug
@@ -1,30 +1,20 @@
 doctype html
 html(lang="ja")
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
     block vars
     - var meta = data.data.meta
     title= title
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name="description" content=meta.description)
     meta(name="keywords" content=meta.keywords)
+    meta#viewport(name="viewport", content="width=device-width, initial-scale=1")
 
-    block viewport
-
-    //facebook open graph
-    meta(property="og:type" content="website")
-    meta(property="og:title",content=meta.title)
-    meta(property="og:description",content=meta.description)
-    meta(property="og:site_name",content=title)
-    meta(property="og:url",content=meta.url)
-    meta(property="og:image",content=meta.ogimg)
-    meta(property="og:locale",content="ja_JP")
-
-    meta(name="twitter:card" content="summary_large_image")
-
+    include ./ga
     include ./og
 
     block style
+    block head-contents
 
 
   body
