--- a/app/layout/partials/meta.pug
+++ b/app/layout/partials/meta.pug
@@ -1,5 +1,5 @@
-{
-  "meta": {
+-
+  var meta = {
     "title":"ページタイトル",
     "description":"ディスクリプション",
     "keywords":"キーワード",
@@ -8,4 +8,4 @@
     "og_url":"シェアurl",
     "og_img":"http://hoge.com/img/ogimg.png"
   }
-}
+-
