--- a/app/layout/partials/head.pug
+++ b/app/layout/partials/head.pug
@@ -1,21 +1,20 @@
 doctype html
 html(lang="ja")
   head
+    include ./data
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     block vars
-    - var meta = data.data.meta
     title= title
     meta(name="description" content=meta.description)
     meta(name="keywords" content=meta.keywords)
     meta#viewport(name="viewport", content="width=device-width, initial-scale=1")
-
     include ./ga
     include ./og
 
     block style
 
 
-  body
+  body(ontouchstart="")
     block content
     block script
