pugのincludeまわりとかgulpfile整えたりとか

--- a/app/layout/partials/head.pug
+++ b/app/layout/partials/head.pug
@@ -1,11 +1,14 @@
 doctype html
 html(lang="ja")
   head
-    include ./data
+    include ./meta
+    include ./mixins
+
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    block vars
-    title= title
+
+    block head
+
     meta(name="description" content=meta.description)
     meta(name="keywords" content=meta.keywords)
     meta#viewport(name="viewport", content="width=device-width, initial-scale=1")
