--- a/app/layout/test/index.pug
+++ b/app/layout/test/index.pug
@@ -1,7 +1,7 @@
-extends ./partials/head
+extends ../partials/head
 
 block head
-  title="タイトル"
+  title="テスト"
 
 
 block style
@@ -18,9 +18,6 @@ block content
   +includes('testcomponents')
   .pc-image
   .sp-image
-
-
-
 
 
 
