--- a/app/style/main.styl
+++ b/app/style/main.styl
@@ -13,3 +13,5 @@ $font= "ヒラギノ角ゴ Pro W3", "メイリオ", "Meiryo", sans-serif;
   sprite($pc_sprite_test1)
 .sp-image
   sp-sprite($sp_sprite_test3, $spW)
+// body
+//   color: red
